packages/next-swc/crates/next-custom-transforms/tests/errors/next-font-loaders/wrong-scope/output.js
Aladin({});
let b;
const a = b = Aladin({
    variant: '400'
});
function Hello() {
    const a = Aladin({
        variant: '400'
    });
}
class C {
    constructor(){
        Aladin({
            variant: '400'
        });
    }
}
{
    Aladin({});
}
